fix: add visibility hidden to tooltip to avoid invisible hover target

--- a/src/components/notification/Notification.module.scss
+++ b/src/components/notification/Notification.module.scss
@@ -18,6 +18,7 @@
 }
 
 .tooltip {
+  visibility: hidden;
   width: 115px;
   background-color: #555555;
   color: #ffffff;
